// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChatList /> renders correctly 1`] = `
<ul
  className="MuiList-root-51 MuiList-padding-52 ChatList-chatsList-50"
>
  <li
    className="MuiListItem-root-56 MuiListItem-default-59 MuiListItem-gutters-63 MuiListItem-divider-62 ChatListItem-activeChat-55"
    disabled={false}
    onClick={[Function]}
    style={
      Object {
        "cursor": "pointer",
      }
    }
  >
    <div
      className="MuiAvatar-root-66 MuiAvatar-colorDefault-67"
      style={
        Object {
          "backgroundColor": "#8bc34a",
        }
      }
    >
      GT
    </div>
    <div
      className="MuiListItemText-root-69"
    >
      <h3
        className="MuiTypography-root-75 MuiTypography-subheading-82 MuiListItemText-primary-72"
      >
        Gryffindor Talks
      </h3>
    </div>
  </li>
  <li
    className="MuiListItem-root-56 MuiListItem-default-59 MuiListItem-gutters-63 MuiListItem-divider-62"
    disabled={false}
    onClick={[Function]}
    style={
      Object {
        "cursor": "pointer",
      }
    }
  >
    <div
      className="MuiAvatar-root-66 MuiAvatar-colorDefault-67"
      style={
        Object {
          "backgroundColor": "#009688",
        }
      }
    >
      HT
    </div>
    <div
      className="MuiListItemText-root-69"
    >
      <h3
        className="MuiTypography-root-75 MuiTypography-subheading-82 MuiListItemText-primary-72"
      >
        Hufflepuff Talks
      </h3>
    </div>
  </li>
  <li
    className="MuiListItem-root-56 MuiListItem-default-59 MuiListItem-gutters-63 MuiListItem-divider-62"
    disabled={false}
    onClick={[Function]}
    style={
      Object {
        "cursor": "pointer",
      }
    }
  >
    <div
      className="MuiAvatar-root-66 MuiAvatar-colorDefault-67"
      style={
        Object {
          "backgroundColor": "#009688",
        }
      }
    >
      RT
    </div>
    <div
      className="MuiListItemText-root-69"
    >
      <h3
        className="MuiTypography-root-75 MuiTypography-subheading-82 MuiListItemText-primary-72"
      >
        Ravenclaw Talks
      </h3>
    </div>
  </li>
  <li
    className="MuiListItem-root-56 MuiListItem-default-59 MuiListItem-gutters-63 MuiListItem-divider-62"
    disabled={false}
    onClick={[Function]}
    style={
      Object {
        "cursor": "pointer",
      }
    }
  >
    <div
      className="MuiAvatar-root-66 MuiAvatar-colorDefault-67"
      style={
        Object {
          "backgroundColor": "#ff5722",
        }
      }
    >
      ST
    </div>
    <div
      className="MuiListItemText-root-69"
    >
      <h3
        className="MuiTypography-root-75 MuiTypography-subheading-82 MuiListItemText-primary-72"
      >
        Slytherin Talks
      </h3>
    </div>
  </li>
</ul>
`;

exports[`<ChatList /> renders disabled correctly 1`] = `
<ul
  className="MuiList-root-51 MuiList-padding-52 ChatList-chatsList-50"
>
  <li
    className="MuiListItem-root-56 MuiListItem-default-59 MuiListItem-gutters-63 MuiListItem-divider-62 MuiListItem-disabled-61 ChatListItem-activeChat-55"
    disabled={true}
    onClick={[Function]}
    style={
      Object {
        "cursor": "pointer",
      }
    }
  >
    <div
      className="MuiAvatar-root-66 MuiAvatar-colorDefault-67"
      style={
        Object {
          "backgroundColor": "#8bc34a",
        }
      }
    >
      GT
    </div>
    <div
      className="MuiListItemText-root-69"
    >
      <h3
        className="MuiTypography-root-75 MuiTypography-subheading-82 MuiListItemText-primary-72"
      >
        Gryffindor Talks
      </h3>
    </div>
  </li>
  <li
    className="MuiListItem-root-56 MuiListItem-default-59 MuiListItem-gutters-63 MuiListItem-divider-62 MuiListItem-disabled-61"
    disabled={true}
    onClick={[Function]}
    style={
      Object {
        "cursor": "pointer",
      }
    }
  >
    <div
      className="MuiAvatar-root-66 MuiAvatar-colorDefault-67"
      style={
        Object {
          "backgroundColor": "#009688",
        }
      }
    >
      HT
    </div>
    <div
      className="MuiListItemText-root-69"
    >
      <h3
        className="MuiTypography-root-75 MuiTypography-subheading-82 MuiListItemText-primary-72"
      >
        Hufflepuff Talks
      </h3>
    </div>
  </li>
  <li
    className="MuiListItem-root-56 MuiListItem-default-59 MuiListItem-gutters-63 MuiListItem-divider-62 MuiListItem-disabled-61"
    disabled={true}
    onClick={[Function]}
    style={
      Object {
        "cursor": "pointer",
      }
    }
  >
    <div
      className="MuiAvatar-root-66 MuiAvatar-colorDefault-67"
      style={
        Object {
          "backgroundColor": "#009688",
        }
      }
    >
      RT
    </div>
    <div
      className="MuiListItemText-root-69"
    >
      <h3
        className="MuiTypography-root-75 MuiTypography-subheading-82 MuiListItemText-primary-72"
      >
        Ravenclaw Talks
      </h3>
    </div>
  </li>
  <li
    className="MuiListItem-root-56 MuiListItem-default-59 MuiListItem-gutters-63 MuiListItem-divider-62 MuiListItem-disabled-61"
    disabled={true}
    onClick={[Function]}
    style={
      Object {
        "cursor": "pointer",
      }
    }
  >
    <div
      className="MuiAvatar-root-66 MuiAvatar-colorDefault-67"
      style={
        Object {
          "backgroundColor": "#ff5722",
        }
      }
    >
      ST
    </div>
    <div
      className="MuiListItemText-root-69"
    >
      <h3
        className="MuiTypography-root-75 MuiTypography-subheading-82 MuiListItemText-primary-72"
      >
        Slytherin Talks
      </h3>
    </div>
  </li>
</ul>
`;

exports[`<ChatList /> renders without active chat 1`] = `
<ul
  className="MuiList-root-51 MuiList-padding-52 ChatList-chatsList-50"
>
  <li
    className="MuiListItem-root-56 MuiListItem-default-59 MuiListItem-gutters-63 MuiListItem-divider-62"
    disabled={false}
    onClick={[Function]}
    style={
      Object {
        "cursor": "pointer",
      }
    }
  >
    <div
      className="MuiAvatar-root-66 MuiAvatar-colorDefault-67"
      style={
        Object {
          "backgroundColor": "#8bc34a",
        }
      }
    >
      GT
    </div>
    <div
      className="MuiListItemText-root-69"
    >
      <h3
        className="MuiTypography-root-75 MuiTypography-subheading-82 MuiListItemText-primary-72"
      >
        Gryffindor Talks
      </h3>
    </div>
  </li>
  <li
    className="MuiListItem-root-56 MuiListItem-default-59 MuiListItem-gutters-63 MuiListItem-divider-62"
    disabled={false}
    onClick={[Function]}
    style={
      Object {
        "cursor": "pointer",
      }
    }
  >
    <div
      className="MuiAvatar-root-66 MuiAvatar-colorDefault-67"
      style={
        Object {
          "backgroundColor": "#009688",
        }
      }
    >
      HT
    </div>
    <div
      className="MuiListItemText-root-69"
    >
      <h3
        className="MuiTypography-root-75 MuiTypography-subheading-82 MuiListItemText-primary-72"
      >
        Hufflepuff Talks
      </h3>
    </div>
  </li>
  <li
    className="MuiListItem-root-56 MuiListItem-default-59 MuiListItem-gutters-63 MuiListItem-divider-62"
    disabled={false}
    onClick={[Function]}
    style={
      Object {
        "cursor": "pointer",
      }
    }
  >
    <div
      className="MuiAvatar-root-66 MuiAvatar-colorDefault-67"
      style={
        Object {
          "backgroundColor": "#009688",
        }
      }
    >
      RT
    </div>
    <div
      className="MuiListItemText-root-69"
    >
      <h3
        className="MuiTypography-root-75 MuiTypography-subheading-82 MuiListItemText-primary-72"
      >
        Ravenclaw Talks
      </h3>
    </div>
  </li>
  <li
    className="MuiListItem-root-56 MuiListItem-default-59 MuiListItem-gutters-63 MuiListItem-divider-62"
    disabled={false}
    onClick={[Function]}
    style={
      Object {
        "cursor": "pointer",
      }
    }
  >
    <div
      className="MuiAvatar-root-66 MuiAvatar-colorDefault-67"
      style={
        Object {
          "backgroundColor": "#ff5722",
        }
      }
    >
      ST
    </div>
    <div
      className="MuiListItemText-root-69"
    >
      <h3
        className="MuiTypography-root-75 MuiTypography-subheading-82 MuiListItemText-primary-72"
      >
        Slytherin Talks
      </h3>
    </div>
  </li>
</ul>
`;
